<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_fundamentals_examples</name>
  <version>0.0.0</version>
  <description>The package includes minimalist ROS 2 code to demonstrate concepts and patterns.</description>
  <maintainer email="rkimon@gmail.com">reuel-terezakis</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>std_msgs/String</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
